--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "main": "src/index.js",
   "dependencies": {
     "@babel/runtime": "7.13.8",
+    "@fortawesome/fontawesome-free": "5.15.2",
+    "@fortawesome/fontawesome-svg-core": "1.2.34",
+    "@fortawesome/free-solid-svg-icons": "5.15.2",
+    "@fortawesome/react-fontawesome": "0.1.14",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-scripts": "4.0.0"
